# mpris-discord-presence

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  TODO.md  config.example.toml  pyproject.toml
.agents/skills/post-implementation/: SKILL.md
.agents/skills/qa-prep/: SKILL.md
.claude/skills/docs-cleanup/: SKILL.md
.github/workflows/: tests.yml
_docs/: documentation_guide.md
_docs/guide/Core/mpris-discord-presence/: usage.md
_docs/intent/Core/mpris-discord-presence/: decision.md
_docs/intent/Core/user-local-install/: decision.md
_docs/intent/Workflow/docs-template-v1-migration/: decision.md
_docs/plan/Core/user-local-install/: plan.md
_docs/qa/Core/mpris-discord-presence/: test-plan.md  verification.md
_docs/qa/Core/user-local-install/: test-plan.md  verification.md
_docs/standards/: documentation_guidelines.md  documentation_operations.md  quality_assurance.md
_evals/agent-workflows/: expected-invariants.md
_evals/validator-fixtures/: README.md
_evals/validator-fixtures/links/: valid-reference-anchor.md
packaging/systemd/: mpris-discord-presence.service.in
scripts/: agent-workflow-hook.mjs  check-docs.sh  install-user-service.sh  test-agent-workflow-smoke.mjs  test-install-user-service.sh  test-validators.mjs  validate-frontmatter.mjs  validate-qa.mjs
src/mpris_discord_presence/: __init__.py  activity.py  app.py  arbiter.py  cli.py  config.py  discord_ipc.py  models.py  mpris_source.py
tests/: __init__.py  test_activity.py  test_app.py  test_arbiter.py  test_cli.py  test_config.py  test_discord_ipc.py  test_mpris_source.py
(+9 files in other folders)
