[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mpris-discord-presence"
version = "0.1.0"
description = "Publish the active Linux MPRIS player as Discord Rich Presence"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "penne" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
mpris-discord-presence = "mpris_discord_presence.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
